Correct contrast + add anchor for rallyes

--- a/_mockUp/src/styl/ITCSS/base/_base.forms.styl
+++ b/_mockUp/src/styl/ITCSS/base/_base.forms.styl
@@ -16,6 +16,7 @@ input, textarea
     max-height 100%
     font-family wf_font-labeur
     rem-fallback( font-size, 16px )
+    resize none
 
 input[type="submit"]
     font-family wf_font-nav
