--- a/_mockUp/src/styl/ITCSS/components/_components.forms.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.forms.styl
@@ -34,7 +34,7 @@
         rem-fallback( margin-bottom, 24px )
 .forms__search--right
     position absolute
-    top 0
+    top -8px
     right 0
 
     +media-query( screen, max-width 960px )
@@ -77,7 +77,7 @@
     width 100%
     background-color wf_form-background-color
     rem-fallback( padding, 12px 24px )
-    border 1px solid wf_border-forms 
+    border 1px solid wf_border-forms
     &:focus
         background-color wf_form-background-color-focus
 .input__submit
